k8s/reactor-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactor-client
spec:
  selector:
    matchLabels:
      app: reactor-client
  template:
    metadata:
      labels:
        app: reactor-client
    spec:
      containers:
        - args:
            - ping.ReactorClient
            - reactor-server
          image: grpc-load-balancing-demo
          imagePullPolicy: Never
          name: reactor-client
