k8s/rx-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rx-client
spec:
  selector:
    matchLabels:
      app: rx-client
  replicas: 1
  template:
    metadata:
      labels:
        app: rx-client
    spec:
      containers:
      - name: reactor-server
        image: rx-client
        imagePullPolicy: Never
        args: [ "reactor-server" ]
      - name: rx-server
        image: rx-client
        imagePullPolicy: Never
        args: [ "rx-server" ]
      - name: kong
        image: kong
        securityContext:
          capabilities:
            add:
            - NET_RAW
        ports:
        - name: kongstream
          containerPort: 7000
          protocol: TCP
        - name: kongproxy
          containerPort: 8000
          protocol: TCP
        - name: kongproxyssl
          containerPort: 8443
          protocol: TCP
        - name: kongadmin
          containerPort: 8001
          protocol: TCP
        - name: kongadminssl
          containerPort: 8443
          protocol: TCP
