k8s/linkerd.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: l5d
  name: l5d
spec:
  template:
    metadata:
      labels:
        app: l5d
    spec:
      volumes:
        - name: l5d-config
          configMap:
            name: l5d-config
      containers:
        - name: l5d
          image: buoyantio/linkerd:1.6.2
          args:
            - /io.buoyant/linkerd/config/config.yaml
          ports:
            - name: outgoing
              containerPort: 4140
              hostPort: 4140
            - name: admin
              containerPort: 9990
          volumeMounts:
            - name: l5d-config
              mountPath: /io.buoyant/linkerd/config
              readOnly: true
        - name: kubectl
          image: buoyantio/kubectl:v1.12.2
          args:
            - proxy
            - -p
            - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: l5d
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
    - name: outgoing
      port: 4140
    - name: incoming
      port: 4141
    - name: admin
      port: 9990
