k8s/reactor-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactor-server
spec:
  selector:
    matchLabels:
      app: reactor-server
  replicas: 4
  template:
    metadata:
      labels:
        app: reactor-server
    spec:
      containers:
        - args:
            - ping.ReactorServer
          image: grpc-load-balancing-demo
          imagePullPolicy: Never
          name: reactor-server
        - name: kong
          image: kong:1.0
          securityContext:
            capabilities:
              add:
                - NET_RAW
          ports:
            - name: kongstream
              containerPort: 7000
              protocol: TCP
            - name: kongproxy
              containerPort: 8000
              protocol: TCP
            - name: kongproxyssl
              containerPort: 8443
              protocol: TCP
            - name: kongadmin
              containerPort: 8001
              protocol: TCP
            - name: kongadminssl
              containerPort: 8443
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: reactor-server
spec:
  type: NodePort
  ports:
    - port: 50505
  selector:
    app: reactor-server
