k8s/istio-grpc-web-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: echo-server-filter
spec:
  workloadLabels:
    app: rx-server
  filters:
    - listenerMatch:
        portNumber: 50505
        listenerType: SIDECAR_INBOUND
      filterName: envoy.grpc_web
      filterType: HTTP
      filterConfig: {}
      insertPosition:
        index: FIRST
