k8s/istio-rx-server-dest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rx-server
spec:
  hosts:
    - "*"
  gateways:
    - grpc-gateway
  http:
    - match:
        - uri:
            prefix: /ping.Service/
      route:
        - destination:
            host: rx-server
